<resources>
    <string name="app_name">AndSql</string>
    <string name="studentadd">ADD</string>
    <string name="search">Search</string>
    <string name="namestudent">ENTER NAME</string>
    <string name="contact_no">Contact no:-</string>
    <string name="dob">DATE OF BIRTH:-</string>
    <string name="addstudent">addstudent</string>
    <string name="textview">TextView</string>
    <string name="all_student">ALL STUDENT</string>
    <string name="update">update</string>
    <string name="name">NAME:-</string>
    <string name="Delete">DELETE</string>
</resources>
