<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"


    >


        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/_addstudent"
            android:layout_width="match_parent"
            android:layout_height="60dp"

            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="40dp"
            android:background="#45f9d8"
            android:onClick="openaddstudnt"
            android:text="@string/studentadd" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="172dp"
            android:background="#45f9d8"
            android:text="@string/search" />

        <Button
            android:id="@+id/getlist"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="60dp"
            android:background="#45f9d8"
            android:onClick="onclick"
            android:text="@string/all_student" />

        <Button
            android:id="@+id/update_database"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="146dp"
            android:backgroundTint="@android:color/holo_blue_bright"
            android:onClick="upgradedata"
            android:text="DELETE" />


</RelativeLayout>