<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="12sp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nameTextVIew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/text_view_list1"
            android:layout_width="293dp"
            android:layout_height="wrap_content"


            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:textSize="20dp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="68dp"
            tools:layout_editor_absoluteY="0dp" />

        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/dobText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dob"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/text_view_list2"
            android:layout_width="247dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:id="@+id/contactno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_no"
            android:textSize="15sp"
            android:layout_weight="1"/>


        <TextView
            android:id="@+id/text_view_list3"
            android:layout_width="240dp"
            android:layout_height="match_parent"

            />
    </LinearLayout>


</LinearLayout>
